# Isabelle_RPC

./: .gitignore  LICENSE  List_Theory_Hash_App.thy  README.md  ROOT  Remote_Procedure_Calling.thy  launcher.py  list_theory_hash.py  pyproject.toml  test_attached_host.py  test_paths.py
.claude/skills/isabelle-rpc/: SKILL.md
.claude/skills/isabelle-rpc/references/: modules.md  protocol.md  registry.md
.github/workflows/: release-conda.yml
Isabelle_RPC_Host/: __init__.py  context.py  dialogue.py  launcher.py  paths.py  position.py  print.py  rpc.py  rpc.pyi  run_python.py  theory_hash.py  tokens.py  unicode.py  universal_key.py
Tools/: RPC.ML  Term_Digest.ML  UUID.ML  Universal_Key.ML  config.ML  context.ML  dialogue.ML  getenv.ML  inner_syntax_error.ML  list_theory_hash_app.ML  pretty.ML  run_python.ML  theory_hash.ML  tracing.ML
conda/: recipe.yaml
contrib/mlmsgpack/: mlmsgpack-aux.sml  mlmsgpack.smi  mlmsgpack.sml
